# isiGroup

./: .gitignore  CLAUDE.md  README.md  RELEASING.md  ROADMAP.md  index.html  notes.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: make-latest-json.mjs  prepare-sidecar.mjs
sidecar/: index.mjs  package-lock.json  package.json  pnpm-lock.yaml
sidecar/migrations/: 001_init.sql  002_targets_unique.sql  003_recurring.sql  004_sequence.sql  005_rich_steps.sql  006_triggers.sql  007_multichip.sql  008_dispatch_account.sql  009_log_account.sql  010_refinements.sql  011_group_selections.sql  012_announce_resume.sql
sidecar/src/: automation.mjs  db.mjs  media.mjs  scheduler.mjs  webhooks.mjs  whatsapp.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: keep.txt
src-tauri/src/: entitlement.rs  hwid.rs  lib.rs  license.rs  sidecar.rs
src/components/: AutomationView.tsx  ConnectionView.tsx  ConnectionsView.tsx  FaqView.tsx  GroupPicker.tsx  LicenseGate.tsx  MainShell.tsx  Pager.tsx  SchedulerView.tsx  StepEditor.tsx  TargetsView.tsx
src/lib/: api.ts
