[package]
name = "tauri-app"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Licenca + sidecar
reqwest = { version = "0.12", features = ["json"] }      # Windows usa SChannel (sem OpenSSL)
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
ed25519-dalek = "2"   # verificacao do entitlement (JWT EdDSA); aceita pubkey raw 32 bytes
base64 = "0.22"       # base64url (URL_SAFE_NO_PAD) p/ header/payload/sig e campo x

